syntax = "proto3";

option csharp_namespace = "Harmony.Api.Protos";

message UserCardFilterRequest {
	string cardId = 1;
	string userId  = 2;
}

message IsCardAssignedRequest {
	string cardId = 1;
}

message IsCardAssignedResponse {
	bool isAssigned = 1;
    repeated string users = 2;
}

message UserCardResponse {
	bool found = 1;
    UserCard userCard = 2;
}

message UserCard {
	string cardId = 1;
    string userId = 2;
}

message AddUserCardRequest {
    string boardId = 1;
    string cardId = 2;
    string userId = 3;
}

message AddUserCardResponse {
    bool success = 1;
    string error = 2;
}

service UserCardService {
  // returns a User Card
  rpc GetUserCard (UserCardFilterRequest) returns (UserCardResponse);
  rpc AddUserCard (AddUserCardRequest) returns (AddUserCardResponse);
  rpc IsCardAssigned (IsCardAssignedRequest) returns (IsCardAssignedResponse);
}
